# UIBK-AdvancedCXX

./: .gitignore  Metroidvania_spec.md  README.md  example.cpp
ex01/: README.md
ex01/task3/: CMakeLists.txt
ex01/task3/app/: CMakeLists.txt
ex01/task3/libBar/: CMakeLists.txt  bar.hpp
ex01/task3/libBaz/: CMakeLists.txt  baz.hpp
ex01/task3/libFoo/: CMakeLists.txt  foo.hpp
ex02/: README.md
ex03/: README.md
ex03/task1/: CMakeLists.txt  task1.cpp
ex03/task3/: summary_task3.txt
ex04/: README.md
ex04/task1/: CMakeLists.txt  Task1.java  task1.cpp
ex04/task2/: CMakeLists.txt  plot.r  stack.cpp  times.txt
ex04/task3/: summary.md
ex04/task4/: CMakeLists.txt  parameter_pack.cpp
ex05/: README.md
ex05/task1/: task1.cpp
ex05/task2/: CMakeLists.txt  generator.py  task2.cpp
ex05/task2/container-test/: CMakeLists.txt  container-test.cpp
ex05/task2/plot/: int-container-comparison.ods  person-container-comparison.ods
ex05/task3/: CMakeLists.txt  task3.cpp
ex06/: README.md
ex06/task1/libIntercept/: intercept_foo.cpp  readme.txt
ex06/task2/: CMakeLists.txt  main.cpp  plugin.hpp
ex06/task2/loader/: DLLoader.hpp  IDLLoader.hpp
ex06/task2/plugins/: plugin.hpp
ex06/task2/plugins/bar/: CMakeLists.txt  bar.cpp  bar.hpp
ex06/task2/plugins/foo/: CMakeLists.txt  foo.cpp  foo.hpp
ex07/: README.md
ex07/task1/: CMakeLists.txt  task1.cpp
ex07/task1/intermediate-1/: CMakeLists.txt  task1.cpp
ex07/task1/intermediate-2/: CMakeLists.txt  task1.cpp
ex07/task2/: CMakeLists.txt  task2.cpp
ex09/: crtp  crtp-2.cpp
ex09/task2/: crtp-3.cpp  crtp-counter.cpp  crtp.cpp
ex10/: README.md
ex10/task1/: chat_message.hpp.gch
ex10/task2/: CMakeLists.txt  Makefile  imgui.ini  main.cpp
images/: behaviour_tree_example.dot  ccotm_items.xcf  ccotm_kickboots_banner.xcf  ccotm_nathen_sprite_map.xcf
sideproject/: CMakeLists.txt  Makefile  README.md  README.txt
sideproject/app/: CMakeLists.txt  app.cpp
sideproject/arrows/: Arrow.cpp  Arrow.h  Arrows.cpp  Arrows.h  CMakeLists.txt
sideproject/assets/games/: 01.txt  game-01.txt
sideproject/assets/images/: srgb-fix.py
sideproject/assets/maps/: map01.txt  map02.txt  map03.txt  room01.txt  room02.txt  room03.txt  room04.txt  room05.txt  room06.txt  room07.txt  room08.txt  room09.txt  room10.txt  room11.txt  room12.txt  room13.txt
sideproject/assets/profiles/: boss.txt  cat.txt  demon.txt  demonBoss.txt  devil.txt  evil.txt  fireball.txt  ghost.txt  main.txt  skull.txt  swamp.txt  thirdBoss.txt  wizard.txt
sideproject/boss/: CMakeLists.txt
sideproject/character/: CMakeLists.txt  Character.cpp  Character.h  CharacterStatus.h  character.cpp  character.h
sideproject/character/profiles/: evil.txt  main.txt
sideproject/enemy/: Boss.cpp  Boss.h  CMakeLists.txt  Enemy.cpp  Enemy.h  IEnemy.h  Projectile.cpp  Projectile.h  Projectile_vert.cpp  Projectile_vert.h  SecondBoss.cpp  SecondBoss.h  ThirdBoss.cpp  ThirdBoss.h
sideproject/fireball/: CMakeLists.txt  Fireball.cpp  Fireball.h
sideproject/gameObjectManager/: GameObjectManager.cpp  GameObjectManager.h
sideproject/gameobjects/: CMakeLists.txt  GameObject.cpp  GameObject.h
sideproject/hud/: CMakeLists.txt  HUD.cpp  HUD.h
sideproject/item/: Item.h
sideproject/maps/: room01.txt
sideproject/moveable/: CMakeLists.txt  Moveable.cpp  Moveable.h
sideproject/player/: CMakeLists.txt  Player.cpp  Player.h
sideproject/room/: CMakeLists.txt  Room.cpp  Room.h  room.cpp  room.h
sideproject/room/maps/: room01.txt
sideproject/settings/: CMakeLists.txt  Settings.cpp  Settings.h  settings.h
sideproject/sprite/: CMakeLists.txt  Sprite.cpp  Sprite.h  sprite.cpp  sprite.h
sideproject/texture/: CMakeLists.txt  Texture.cpp  Texture.h  texture.cpp  texture.h
sideproject/tileManager/: CMakeLists.txt  Tile.cpp  Tile.h
sideproject/timer/: CMakeLists.txt  Timer.cpp  Timer.h  timer.cpp  timer.h
sideproject/util/: CMakeLists.txt  Util.cpp  Util.h
slides/: Makefile  intro_slides.md
