cmake_minimum_required(VERSION 3.10)

project(sidescroller)

add_subdirectory(app)
add_subdirectory(arrows)
add_subdirectory(timer)
add_subdirectory(texture)
add_subdirectory(settings)
add_subdirectory(character)
add_subdirectory(player)
add_subdirectory(enemy)
add_subdirectory(room)
add_subdirectory(gameobjects)
add_subdirectory(moveable)
add_subdirectory(hud)
add_subdirectory(tileManager)
add_subdirectory(sprite)
add_subdirectory(boss)

